[gd_scene load_steps=20 format=3 uid="uid://b553bl0r18aqn"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_aro05"]
[ext_resource type="PackedScene" uid="uid://dj0sjsttpmxm6" path="res://scenes/pistol.blend" id="2_bbsjt"]
[ext_resource type="Texture2D" uid="uid://dil3g4g3ibw8t" path="res://addons/kenney_particle_pack/star_06.png" id="3_uwqen"]
[ext_resource type="AudioStream" uid="uid://c66v8pum61vj8" path="res://assets/pistol.mp3" id="4_ick0l"]
[ext_resource type="AudioStream" uid="uid://bwfchrp1v7bhu" path="res://assets/hit.wav" id="5_87abr"]
[ext_resource type="AudioStream" uid="uid://kbj8s3i14eht" path="res://assets/scream.mp3" id="6_cof8w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_fsho2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oil0y"]

[sub_resource type="Gradient" id="Gradient_lv1tk"]
offsets = PackedFloat32Array(0, 0.131034, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ryxro"]
gradient = SubResource("Gradient_lv1tk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r8433"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_ryxro")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6oap7"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.980392, 1, 0.686275, 0.996078)
albedo_texture = ExtResource("3_uwqen")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_h5i6h"]
material = SubResource("StandardMaterial3D_6oap7")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_yi87c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qpwvg"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.510099, -0.278175, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.110095, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mg1jk"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.438681, -0.240143, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.528583, -0.236022, -0.5)]
}

[sub_resource type="Animation" id="Animation_yxu7s"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.214952, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.300738, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1168"]
_data = {
"RESET": SubResource("Animation_yi87c"),
"idle": SubResource("Animation_qpwvg"),
"move": SubResource("Animation_mg1jk"),
"shoot": SubResource("Animation_yxu7s")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_n5628"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:username")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("UsernameLabel:text")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_aro05")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_fsho2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_oil0y")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57022, 0)

[node name="pistol" parent="Camera3D" instance=ExtResource("2_bbsjt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/pistol"]
transform = Transform3D(1, 0, 0, 0, 1, -2.38419e-07, 0, 2.38419e-07, 1, 0, 0.0556176, -0.31417)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_r8433")
draw_pass_1 = SubResource("PlaneMesh_h5i6h")

[node name="GunSoundPlayer" type="AudioStreamPlayer3D" parent="Camera3D/pistol"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00920695, 0.0588703, -0.122722)
stream = ExtResource("4_ick0l")
volume_db = -25.351

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -300)
collision_mask = 3
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d1168")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_n5628")

[node name="decals" type="Node" parent="."]

[node name="HitSoundPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
stream = ExtResource("5_87abr")

[node name="DeathSoundPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5075, 0)
stream = ExtResource("6_cof8w")

[node name="UsernameLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2896, 0)
billboard = 1
text = "Player"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
